# HLPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  task-3-learnings.md
docs/: vsr-api-reference.md  vsr-architecture.md
installer/: setup.iss
lang/: hlplayer_en.ts  hlplayer_zh.ts
resources/: app.rc  resources.qrc
resources/qml/: ControlsBar.qml  Main.qml  OfflineVSRStudio.qml  PlayerItem.qml  VSRParameterPanel.qml  (+2 more)
src/asr/: CMakeLists.txt
src/asr/include/hlplayer/: ASRExport.h  ASRPipeline.h  ASRSettings.h  ASRTypes.h  AudioResampler.h  IASREngine.h  IAudioCapture.h  QMLASRBridge.h  SubtitleManager.h  WASAPICapture.h  WhisperEngine.h
src/asr/qml/: SubtitleOverlay.qml
src/asr/src/: ASRPipeline.cpp  ASRSettings.cpp  AudioResampler.cpp  QMLASRBridge.cpp  SubtitleManager.cpp  WASAPICapture.cpp  WhisperEngine.cpp
src/camera/: CMakeLists.txt
src/camera/include/hlplayer/: AudioEncoder.h  CameraExport.h  CameraSource.h  CameraTypes.h  HWEncoderDetector.h  HWVideoEncoder.h  PreviewRenderer.h  QMLCameraRecorder.h  RecordingFrameQueue.h  RecordingPipeline.h  RecordingPipelineV2.h  StreamMuxer.h  StreamingPipeline.h
src/camera/qml/: CameraRecordingPage.qml  StreamingPage.qml
src/camera/src/: AudioEncoder.cpp  CameraSource.cpp  HWEncoderDetector.cpp  HWVideoEncoder.cpp  PreviewRenderer.cpp  QMLCameraRecorder.cpp  RecordingPipeline.cpp  RecordingPipelineV2.cpp  StreamMuxer.cpp  StreamingPipeline.cpp
src/camera/tests/: CMakeLists.txt  camera_test.cpp
src/core/: CMakeLists.txt  CheckpointManager.cpp  CheckpointManager.h  DecodeFallback.cpp  DecodeFallback.h  ModelManager.cpp  ModelManager.h  OfflineTranscodePipeline.cpp  OfflineTranscodePipeline.h  PerformanceMonitor.cpp  Player.cpp  Player.h  RealtimeVSRPipeline.cpp  ResumeManager.cpp  ResumeManager.h  VRAMBudgetManager.cpp  VRAMBudgetManager.h  VSRCircuitBreaker.cpp  VSRCircuitBreaker.h  VSRErrorCatalog.cpp  VSRSyncCompensator.cpp
src/core/include/hlplayer/: AIPipelineStub.h  AVSync.h  CPUFallbackDecoder.h  DefaultStreamResolver.h  Demuxer.h  DirectStreamResolver.h  EventBus.h  Export.h  FFPlayer.h  FrameQueue.h  GpuFrameContract.h  HLPlayer.h  HWDecoder.h  IAIPipeline.h  IAudioDecoder.h  IAudioRenderer.h  ICheckpointManager.h  IModelManager.h  IMuxer.h  IPipelineNode.h  IPlayerFacade.h  IStreamResolver.h  IVRAMBudgetManager.h  IVideoEncoder.h  IVideoFrameSink.h  MediaPlayer.h  NCNNInterop.h  NcnnAIPipeline.h  PacketQueue.h  PerformanceMonitor.h  PlayerApi.h  PlayerFacade.h  QoSManager.h  QueueWatermarks.h  RealtimeVSRPipeline.h  Result.h  StateMachine.h  StreamRecorder.h  SyncClock.h  VSRErrorCatalog.h  (+4 more)
src/core/src/: AIPipelineStub.cpp  AVSync.cpp  AudioTempoProcessor.cpp  AudioTempoProcessor.h  CPUFallbackDecoder.cpp  DefaultStreamResolver.cpp  Demuxer.cpp  DirectStreamResolver.cpp  EventBus.cpp  FFPlayer.cpp  HLPlayer.cpp  HWDecoder.cpp  MediaPlayer.cpp  NCNNInterop.cpp  NcnnAIPipeline.cpp  PlayerApiImpl.cpp  PlayerFacade.cpp  QoSManager.cpp  StateMachine.cpp  StreamRecorder.cpp  VideoRefreshThread.cpp  logger.cpp  telemetry.cpp
src/crypto/: AesCtr256.cpp  AesCtr256.h  CMakeLists.txt  CryptoExport.h  DecryptingAVIOContext.cpp  DecryptingAVIOContext.h  EncryptionExporter.cpp  EncryptionExporter.h  FileEncryptor.cpp  FileEncryptor.h  HlvHeader.cpp  HlvHeader.h  HmacSha256.cpp  HmacSha256.h  KeyManager.cpp  KeyManager.h  SecureAllocator.h  SessionKeyCache.cpp  SessionKeyCache.h  constant_time.h  pbkdf2.cpp  pbkdf2.h
src/extractor/: CMakeLists.txt  DecoderSelector.cpp  DecoderSelector.h  ExtractorFactory.cpp  ExtractorFactory.h  FFmpegAudioDecoder.cpp  FFmpegAudioDecoder.h  FFmpegDemuxer.cpp  FFmpegDemuxer.h  FFmpegMuxer.cpp  FFmpegMuxer.h  FFmpegRAII.h  FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  HWDevicePool.cpp  HWDevicePool.h  HWVideoEncoder.cpp  HWVideoEncoder.h  StreamExtractor.cpp  StreamExtractor.h
src/qml/: AntiScreenshotManager.cpp  AntiScreenshotManager.h  CMakeLists.txt  EncryptExportDialog.qml  KeyStringDialog.qml  OfflineVSRBridge.cpp  OfflineVSRBridge.h  OfflineVSRStudio.qml  PasswordPromptDialog.qml  PlayerI18nContext.cpp  PlayerI18nContext.h  PlaylistModel.cpp  PlaylistModel.h  QMLEncryptionExporter.cpp  QMLEncryptionExporter.h  QMLPlayer.cpp  QMLPlayer.h  QmlExtensions.cpp  QmlExtensions.h  StreamRecorderBridge.cpp  StreamRecorderBridge.h  ThemeManager.cpp  ThemeManager.h  UrlHistory.cpp  UrlHistory.h  VideoOutputItem.cpp  VideoOutputItem.h
src/qml/HLPlayer/: ControlsBar.qml  JumpDialog.qml  Main.qml  OpenUrlDialog.qml  PlaylistSidebar.qml  StreamOSD.qml  Theme.qml  TitleBar.qml  VideoInfoHUD.qml
src/qml/HLPlayer/Components/: IconButton.qml  OSDMessage.qml  PopupPanel.qml  ProgressBar.qml  SliderBar.qml  TooltipLabel.qml
src/render/: CMakeLists.txt  ColorConverter.cpp  ColorConverter.h  D3D11RenderBridge.cpp  D3D11RenderBridge.h  QtAudioRenderer.cpp  QtAudioRenderer.h  RenderBridge.cpp  RenderBridge.h  SDLAudioRenderer.cpp  SDLAudioRenderer.h  VSRRenderBridge.cpp  VSRRenderBridge.h  VideoSink.cpp  VideoSink.h  VulkanSink.cpp  VulkanSink.h  VulkanVideoSink.cpp  VulkanVideoSink.h
src/subtitle/: CMakeLists.txt  SubtitleRenderer.cpp  SubtitleRenderer.h
src/vsr/: CMakeLists.txt  NcnnSuperResolution.cpp
src/vsr/include/hlplayer/: NcnnSuperResolution.h
tests/: CMakeLists.txt  test_abi_compile.cpp  test_ai_pipeline.cpp  test_crypto_integration.cpp  test_crypto_primitives.cpp  test_decrypting_avio.cpp  test_demuxer.cpp  test_edge_cases.cpp  test_eventbus.cpp  test_extractor.cpp  test_facade.cpp  test_file_encryptor.cpp  test_hlv_header.cpp  test_hwdecoder.cpp  test_interfaces.cpp  test_key_manager.cpp  test_player.cpp  test_qml_player.cpp  test_render.cpp  test_renderbridge.cpp  test_session_cache.cpp  test_statemachine.cpp  test_streamresolver.cpp  test_telemetry.cpp
tests/benchmarks/: benchmark_basic.cpp  benchmark_camera_pipeline.cpp  benchmark_vsr_fps.cpp
tests/e2e/: CMakeLists.txt  TestCheckpointResume.cpp  TestFaultTolerance.cpp  TestOfflineTranscodePipeline.cpp  TestRealtimeVSRPipeline.cpp
tests/regression/: run_regression.ps1  smoke_test.ps1
(+4 files in other folders)
